--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,3 +1,27 @@
+<plan>
+  <step>
+    <tool>functions.getfile</tool>
+    <parameters>
+      <path>.github/actions/setup</path>
+      <repo>dmarinse/superchainerc20-starter</repo>
+    </parameters>
+  </step>
+  <step>
+    <tool>functions.getfile</tool>
+    <parameters>
+      <path>packages/contracts/.env</path>
+      <repo>dmarinse/superchainerc20-starter</repo>
+    </parameters>
+  </step>
+</plan>To optimize this workflow, consider the following improvements:
+
+1. Avoid redundant `Checkout` steps by using a job strategy with a single `Checkout` step.
+2. Use `matrix` strategy to run jobs in parallel, reducing duplication.
+3. Use reusable workflows for common setups.
+
+Here's an optimized version:
+
+```yaml
 name: Unit Tests
 
 on:
@@ -21,7 +45,7 @@ permissions:
   actions: 'read'
 
 jobs:
-  typecheck:
+  setup:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -30,45 +54,32 @@ jobs:
           fetch-depth: 0
       - name: Setup
         uses: ./.github/actions/setup
+
+  typecheck:
+    runs-on: ubuntu-latest
+    needs: setup
+    steps:
       - name: Run TypeChecker
-        run: |
-          pnpm -r typecheck
+        run: pnpm -r typecheck
 
   lint:
     runs-on: ubuntu-latest
+    needs: setup
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Setup
-        uses: ./.github/actions/setup
       - name: Run Linters
-        run: |
-          pnpm -r lint
+        run: pnpm -r lint
 
   test:
     runs-on: ubuntu-latest
+    needs: setup
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Setup
-        uses: ./.github/actions/setup
       - name: Run Tests
-        run: |
-          pnpm -r --filter '!e2e-test' test
+        run: pnpm -r --filter '!e2e-test' test
 
   e2e-test:
     runs-on: ubuntu-latest
+    needs: setup
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-      - name: Setup
-        uses: ./.github/actions/setup
       - name: Write DEPLOYER_PRIVATE_KEY to .env
         run: echo "DEPLOYER_PRIVATE_KEY=${{ vars.DEPLOYER_PRIVATE_KEY }}" >> packages/contracts/.env
       - name: Run Tests
@@ -77,3 +88,4 @@ jobs:
           pnpm supersim &
           pnpm contracts:deploy:dev
           pnpm e2e-test:ci
+```
